# gnome-software-plugin-apk

./: .gitignore  meson.build
.github/: Dockerfile
.github/workflows/: docker-image.yaml  linting.yaml  unittests.yaml
data/: org.gnome.Software.Plugin.Apk.metainfo.xml
src/gs-plugin-apk/: gs-plugin-apk.c  gs-plugin-apk.h
subprojects/: apk-polkit-rs.wrap  gnome-software.wrap
tests/: apkpolkit1.py  apkpolkit2.py  gs-self-test.c  meson.build  test.py  test_wrapper.sh
